# parallel

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.frag  README.md  checkpackage.sh  config.m4  config.w32  docker-compose.yml  package.xml  parallel.c  php_parallel.c  php_parallel.h
.github/: FUNDING.yml
.github/workflows/: asan.yml  config.yml  docker.yml  linux.yml  windows-release.yml  windows.yml
cmd/: getopt.bat  make_module.bat  pthread_build.bat
cmd/deps_build/: CMakeLists.txt  pthread.cxx
cmd/deps_build/cmake/: config_h_in.cmake  get_version.cmake  target_arch.cmake  version.rc.in
docker/: parallel.dockerfile  parallel.test  php.dockerfile  php.src
src/: arena.c  arena.h  cache.c  cache.h  channel.c  channel.h  check.c  check.h  copy.c  copy.h  dependencies.c  dependencies.h  event.c  event.h  events.c  events.h  exceptions.c  exceptions.h  future.c  future.h  group.c  group.h  handlers.c  handlers.h  input.c  input.h  link.c  link.h  list.c  list.h  loop.c  loop.h  monitor.c  monitor.h  parallel.c  parallel.h  payloads.c  payloads.h  poll.c  poll.h  (+12 more)
tests/base/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt  007.phpt  008.phpt  009.phpt  010.phpt  011.phpt  012.phpt  013.phpt  014.phpt  015.phpt  016.phpt  017.phpt  018.phpt  019.phpt  020.phpt  021.phpt  022.phpt  023.phpt  024.phpt  025.phpt  026.phpt  027.phpt  028.phpt  029.phpt  030.phpt  031.phpt  032.phpt  033.phpt  034.phpt  035.phpt  036.phpt  037.phpt  038.phpt  039.phpt  040.phpt  (+43 more)
tests/bugs/: 011.phpt
tests/channel/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt  007.phpt  008.phpt  009.phpt  010.phpt  011.phpt  012.phpt  013.phpt  014.phpt  015.phpt  016.phpt  017.phpt  018.phpt  019.inc  019.phpt  020.phpt  021.phpt  022.phpt  023.phpt  024.phpt
tests/closures/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt  007.phpt  008.phpt  009.phpt  010.inc  010.phpt  011.inc  011.phpt  012.phpt
tests/coop/: 001.phpt  002.phpt  003.phpt  004.phpt  coop.inc
tests/events/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt  007.phpt  009.phpt  010.phpt  011.phpt  012.phpt  013.phpt  014.phpt  015.phpt  016.phpt  017.phpt
tests/events/wait/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt  007.phpt
tests/functional/: 001.phpt  002.inc  002.phpt  003.inc  003.phpt  004.phpt  005.phpt  006.phpt  007.phpt  008.phpt
tests/group/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt
tests/group/perform/: 001.phpt  002.phpt
tests/handlers/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt
tests/sync/: 001.phpt  002.phpt  003.phpt  004.phpt  005.phpt  006.phpt
